Bug 324346 - Recipe cannot be saved anymore in some cases
Summary: Recipe cannot be saved anymore in some cases
Status: RESOLVED FIXED
Alias: None
Product: krecipes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 2.0-beta2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-01 10:02 UTC by Pal Körössy
Modified: 2015-06-20 16:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pal Körössy 2013-09-01 10:02:06 UTC
Second new recipe in a row cannot be saved using the following procedure

Reproducible: Always

Steps to Reproduce:
1. Open Krecipes
2. Create a new recipe and save it, then close it.
3. Create another new recipe, fill the "Recipe name" in then save it.
4. Add ingredient(s) or instructions
Actual Results:  
 It's not possible to save the recipe anymore, Save button remains grey.

Expected Results:  
Save button should be active after adding ingredients or instructions.
Comment 1 José Manuel Santamaría Lema 2015-06-20 16:32:23 UTC
Git commit f3085c7a770af799df1598ca8d8131b7483f6d9b by José Manuel Santamaría Lema.
Committed on 20/06/2015 at 16:30.
Pushed by joselema into branch 'master'.

Enable the changed signals when we open a new recipe.

M  +3    -0    src/dialogs/recipeinputdialog.cpp

http://commits.kde.org/krecipes/f3085c7a770af799df1598ca8d8131b7483f6d9b