Enable the changed signals when we open a new recipe.

BUG: 324346